# pybeef

./: .gitignore  Makefile  README.md  pyproject.toml
beef/: beef.py
beef/test/: sample_workers.py  test_beef.py  test_beef2.py
