[project]
name = "pybeef"
version = "0.0.11"
authors = [
    { name="Mike Kroutikov", email="mkroutikov@innodata.com" },
]
description = "Opinionated distributed RPC using AMQP workers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'aio_pika ~= 9.0.5',
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "twine",
    "build",
]

[project.urls]
"Homepage" = "https://github.com/innodatalabs/beef"
"Bug Tracker" = "https://github.com/pypa/innodatalabs/beef"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
