[project]
name = "pybeef"
version = "0.0.14"
authors = [
    { name="Mike Kroutikov", email="mkroutikov@innodata.com" },
]
description = "Opinionated distributed RPC using AMQP workers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'aio_pika ~= 9.0.5',
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "twine",
    "build",
]

[project.urls]
"Homepage" = "https://github.com/innodatalabs/pybeef"
"Bug Tracker" = "https://github.com/pypa/innodatalabs/pybeef"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["beef"]
